--- a/Front-end/src/index.css
+++ b/Front-end/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;600;700;900&family=Nunito+Sans:wght@400;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;600;700;900&family=Nunito+Sans:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Cabin&family=Space+Mono&display=swap");
 @tailwind base;
 @tailwind components;
@@ -97,4 +97,4 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-}
+} */
